[project]
name = "mht-with-pcs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bokeh>=3.8.2",
    "colorcet>=3.1.0",
    "datashader>=0.18.2",
    "h5py>=3.15.1",
    "holoviews>=1.22.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "kaleido>=1.2.0",
    "latex>=0.7.0",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "optuna>=4.5.0",
    "optuna-integration>=4.5.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "plotly>=6.5.0",
    "rtpt>=0.0.4",
    "ruff>=0.14.3",
    "scienceplots>=2.1.1",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "trackio>=0.2.2",
    "ucimlrepo>=0.0.7",
    "umap-learn>=0.5.11",
    "wandb>=0.22.3",
]
